Fix preloader text overflowing heart icon

--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ body {
 }
 
 .heart-loader .fa-heart {
-    font-size: 130px;
+    font-size: 180px;
     color: #7650a2;
     opacity: 0.2;
 }
@@ -77,7 +77,7 @@ body {
 .heart-loader span {
     position: absolute;
     font-family: 'Dancing Script', cursive;
-    font-size: 45px;
+    font-size: 40px;
     color: #7650a2;
     font-weight: bold;
 }
